add JWT for security

--- a/api/templates/download.html.twig
+++ b/api/templates/download.html.twig
@@ -9,10 +9,10 @@
     </p>
     <p>
         If it does not, please
-        <a href="{{ download_url }}">click here</a>!
+        <a href="{{ download_url|raw }}">click here</a>!
     </p>
     <p>After your download has started, you can safely close this window.</p>
     <script type="application/javascript">
-        document.location = '{{ download_url }}';
+        document.location = '{{ download_url|raw }}';
     </script>
 {% endblock %}
